# scrcpy_ui

./: meson.build
FigmaPlugin/: README.md  code.js  manifest.json  ui.html
app/: meson.build
app/src/: display.c  display.h  events.h  figma_bridge.c  figma_bridge.h  icon.c  icon.h  input_manager.c  input_manager.h  scrcpy.c  screen.c  screen.h
app/src/adb/: adb.c  adb.h
app/src/sys/darwin/: clipboard.h  clipboard.m  font.h  font.m  window.h  window.m
app/src/usb/: screen_otg.c
app/src/util/: log.c  log.h
doc/: shortcuts.md
release/: package_macos_app.sh
